--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -630,6 +630,155 @@ requires users to reset their contacts' `cluster` via deletion and addition or v
 **Cons:** Tedious for users. They also have to ensure that they do not make spelling mistakes.
 // end::cluster[]
 
+// tag::sort[]
+=== Sorting mechanism
+
+Sorting is done within the `UniquePersonList` class.
+[source, java]
+----
+public void sortBy(String order) throws IllegalArgumentException {
+    switch (order) {
+    case "name":
+        internalList.sort((Person p1, Person p2) -> p1.getName().compareTo(p2.getName()));
+        break;
+    case "debt":
+        internalList.sort((Person p1, Person p2) -> p2.getDebt().compareTo(p1.getDebt()));
+        break;
+    case "cluster":
+        internalList.sort((Person p1, Person p2) -> p1.getCluster().compareTo(p2.getCluster()));
+        break;
+    case "deadline":
+        internalList.sort((Person p1, Person p2) -> p1.getDeadline().compareTo(p2.getDeadline()));
+        internalList.sort((Person p1, Person p2) -> Boolean.compare(p1.isWhitelisted(), p2.isWhitelisted()));
+        break;
+    default:
+        throw new IllegalArgumentException("Invalid sort ordering");
+    }
+}
+----
+The `sort` command can take in a `String` that determines how the contacts should be sorted. If no ordering is
+specified, the contacts will be sorted by ascending lexicographical order by default. +
+[source, java]
+----
+public class SortCommandParser implements Parser<SortCommand> {
+    public SortCommand parse(String args) throws ParseException {
+        requireNonNull(args);
+        String trimmedArgs = args.trim().toLowerCase();
+        switch (trimmedArgs) {
+        case "":
+        case "name":
+        case "debt":
+        case "cluster":
+        case "deadline":
+            return new SortCommand(trimmedArgs);
+        default:
+            throw new ParseException(String.format(MESSAGE_INVALID_COMMAND_FORMAT, SortCommand.MESSAGE_USAGE));
+        }
+    }
+}
+----
+[source, java]
+----
+public static final String DEFAULT_ORDERING = "name";
+
+public SortCommand(String order) {
+    //validity of order to sort is checked in {@code SortCommandParser}
+    if (order.equals("")) {
+        order = DEFAULT_ORDERING;
+    }
+    this.order = order;
+}
+
+public CommandResult execute() throws CommandException {
+    try {
+        model.sortBy(order);
+    } // irrelevant parts of the method omitted for brevity
+}
+----
+
+==== Design considerations
+
+**Aspect:** Default `sort` +
+**Alternative 1 (current choice):** `Sort` by `name` by default +
+**Pros:** Relatively easy to implement, extremely intuitive. +
+**Alternative 2:** `Sort` by `debt` by default +
+**Pros:** Equally easy to implement. +
+**Cons:** Slightly less intuitive as sorting by `name` is the most prevalent way of sorting contacts. +
+**Alternative 3:** No default `sort`. +
+**Pros:** Extremely easy to implement. +
+**Cons:** Not user-friendly.
+// end::sort[]
+
+// tag::optionalIndex[]
+=== Optional command indexes
+
+It is intuitive to allow commands such as `edit`, `delete`, `borrow` and others to be called on the currently selected
+person instead of always having to supply the `INDEX`. +
+Parsers of commands call a constructor of the commands without an index. Take the `RepaidCommandParser` and `RepaidCommand` for example.
+[source, java]
+----
+public RepaidCommand parse(String args) throws ParseException {
+    try {
+        if (args.trim().equals("")) {
+            return new RepaidCommand();
+        } else {
+            Index index = ParserUtil.parseIndex(args);
+            return new RepaidCommand(index);
+        }
+    } catch (IllegalValueException ive) {
+        throw new ParseException(
+            String.format(MESSAGE_INVALID_COMMAND_FORMAT, RepaidCommand.MESSAGE_USAGE));
+    }
+}
+----
+[source, java]
+----
+public RepaidCommand() {
+    this.targetIndex = null;
+}
+public CommandResult executeUndoableCommand() throws CommandException {
+    ReadOnlyPerson personToWhitelist = selectPerson(targetIndex);
+    // Perform the command operation as per normal.
+}
+----
+The `selectPerson(Index)` method is placed in the `Command` class, and is used by such index-based commands to select
+the currently selected person to apply the command on if no index is provided.
+[source, java]
+----
+public ReadOnlyPerson selectPerson(Index index) throws CommandException {
+    ReadOnlyPerson selectedPerson;
+    if (index == null) {
+        if (model.getSelectedPerson() == null) {
+            throw new CommandException(Messages.MESSAGE_NO_PERSON_SELECTED);
+        } else {
+            selectedPerson = model.getSelectedPerson();
+        }
+    } else {
+        List<ReadOnlyPerson> lastShownList = listObserver.getCurrentFilteredList();
+
+        if (index.getZeroBased() >= lastShownList.size()) {
+            throw new CommandException(Messages.MESSAGE_INVALID_PERSON_DISPLAYED_INDEX);
+        }
+        selectedPerson = lastShownList.get(index.getZeroBased());
+    }
+    return selectedPerson;
+}
+----
+
+==== Design Considerations
+
+**Aspect:** Executing index-based commands without index. +
+**Alternative 1 (current choice):** Calling a constructor of the `command` without an `Index` initialises its `targetIndex`
+to null, and the null index is handled as a special value during execution. +
+**Pros:** Easy to implement, easy to extend. +
+**Cons:** Although highly unlikely, it may be possible for a `command` to have an unintended null `targetIndex`, which
+will then cause it to behave as an indexless command instead of an error. +
+**Alternative 2:** Find and use the current selection index within the constructor with no parameters. +
+**Pros:** Easier to maintain and test. +
+**Cons:** Difficult to implement as the `model` of a `command` is only set during execution, so it will be hard or even
+impossible to retrieve the current selection in the constructor of a `command`.
+// end::optionalIndex[]
+
 === Logging
 
 We are using `java.util.logging` package for logging. The `LogsCenter` class is used to manage the logging levels and logging destinations.
