--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -939,7 +939,7 @@ Figure 5.8.2 What the user sees
 **Alternative 2:** Use a pop up which is triggered when the app is opened +
 **Pros:** Involuntary and less effort from the users' part +
 **Cons:** If pop up only shows a list of names, users might get confused as to who the person is if there are multiple persons with the same name. +
-//end::brithday[]
+//end::birthday[]
 
 //tag::calendar[]
 === Calendar mechanism
