--- a/docs/team/ArchanaPradeep.adoc
+++ b/docs/team/ArchanaPradeep.adoc
@@ -6,8 +6,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 == Project: AddressBook - Level 4
 AddressBook - Level 4 is a desktop address book application used for teaching Software Engineering principles. The user interacts with it using a CLI, and it has a GUI created with JavaFX. It is written in Java, and has about 6 kLoC.
 
-*Code contributed*: [https://github.com/CS2103AUG2017-T15-B3/main/blob/master/collated/main/archthegit.md[Functional code]] [https://github.com/CS2103AUG2017-T15-B3/main/blob/master/collated/test/archthegit.md[Test code]]
-[https://github.com/CS2103AUG2017-T15-B3/main/blob/master/collated/unused/archthegit.md[Unused code]]
+*Code contributed*: [https://github.com/CS2103AUG2017-T15-B3/main/blob/master/collated/main/archthegit.md[Functional code]] [https://github.com/CS2103AUG2017-T15-B3/main/blob/master/collated/test/archthegit.md[Test code]][https://github.com/CS2103AUG2017-T15-B3/main/blob/master/collated/unused/archthegit.md[Unused code]]
 
 === Enhancement Added: Modified find Command (V1.0)
 
