--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -604,23 +604,45 @@ To exit the program, without using the pointer, use: +
 
 Format: `exit`
 
-==== Selecting of date : `find`
+=== Using the calendar
 
-[**TODO**]
-To find any event (either birthday or deadline) happening on the date, use +
-Format: `find d/DD-MM-YYYY`
+A calendar is useful for marking the important dates. When you have many deadlines and birthdays to take note, the calendar allows you to view all these important dates at a glance. +
+
+==== Marking the dates
+
+With many contacts and tasks to manage, differentiating the birthdays and deadlines on the calendar can be done with the use of colours.
+
+[NOTE]
+The marking of date is done automatically when a contact/task is added, edited or deleted.
 
 Examples:
 
-* `find 29-10-2017` +
-Returns any person having birthday and/or any task having deadlines on `29-10-2017`
+* A task has deadline on `17-07-2017`. +
+The corresponding date on the calendar is marked *red*. +
+* A contact has birthday on `09-12-2017`. +
+The corresponding date on the calendar is marked *pink*. +
+* `17-07-2017` is a date that is a task's deadline and a contact's birthday. +
+The corresponding date on the calendar is marked *yellow*. +
 
-__Constraints:__
+__Constraints__
 
-****
-* Only the birthday and deadline are searched.
-* Only valid date will be matched e.g `291017` will not match `29-10-2017`.
-****
+The colour of the date on the calendar is *only updated* when next/previous button for month/year is clicked or when a date on the calendar is clicked.
+
+==== Clicking of date on the calendar
+
+When there is many deadlines or birthdays on the same date, instead of switching between `CommandMode` and using the `find` command, you can just click on the date itself.
+
+Examples:
+
+* `17` on the calendar that represents `17-07-2017` is being clicked. +
+Returns task list and contacts list that contains tasks with deadline on `17-07-2017` and contacts with birthday on `17-07-2017` respectively.
+
+__Constraint__
+
+When a date is clicked and it is not a deadline or not a birthday or both, an empty task list or an empty contacts list or both will be shown, which will be represented by a blank field on the application. +
+
+To return back to original task list or contacts list, you can use the `list` command.
+
 
 === Saving the data
 
