--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -149,13 +149,13 @@ Deletes the 2nd person in the address book.
 `delete 1` +
 Deletes the 1st person in the results of the `find` command.
 
-=== Selecting a person : `select`
+=== Locating a person : `locate`
 
-Selects the person identified by the index number used in the last person listing. +
-Format: `select INDEX`
+Locates the person identified by the index number used in the last person listing. +
+Format: `locate INDEX`
 
 ****
-* Selects the person and loads the Google search page the person at the specified `INDEX`.
+* Locates the person and loads the Google map page the person at the specified `INDEX`.
 * The index refers to the index number shown in the most recent listing.
 * The index *must be a positive integer* `1, 2, 3, ...`
 ****
@@ -163,11 +163,11 @@ Format: `select INDEX`
 Examples:
 
 * `list` +
-`select 2` +
-Selects the 2nd person in the address book.
+`locate 2` +
+Locates the 2nd person in the address book.
 * `find Betsy` +
-`select 1` +
-Selects the 1st person in the results of the `find` command.
+`locate 1` +
+Locates the 1st person in the results of the `find` command.
 
 === Listing entered commands : `history`
 
