--- a/docs/team/JiaChao.adoc
+++ b/docs/team/JiaChao.adoc
@@ -8,7 +8,7 @@ cherBook is an address book application used by teachers to monitor students' ac
 The user interacts with it using a CLI, and it has a GUI created with JavaFX.
 It is written in Java, and has about 8 kLoC.
 
-*Code contributed*: [https://github.com[Functional code]] [https://github.com[Test code]] {give links to collated code files}
+*Code contributed*: [https://github.com/CS2103AUG2017-T16-B2/main/blob/master/collated/main/lincredibleJC.md[Functional code]] [https://github.com/CS2103AUG2017-T16-B2/main/blob/master/collated/test/lincredibleJC.md[Test code]]
 
 == Roles and Responsibilities
 * Role: Team Lead
